--- a/BoxcarMethodNamePlugin/BoxcarMethodNamePlugin.csproj
+++ b/BoxcarMethodNamePlugin/BoxcarMethodNamePlugin.csproj
@@ -32,40 +32,40 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="JetBrains.Platform.ReSharper.DocumentManager">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.Platform.ReSharper.DocumentManager.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.Platform.ReSharper.DocumentManager.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.DocumentModel">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.Platform.ReSharper.DocumentModel.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.Platform.ReSharper.DocumentModel.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.ProjectModel">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.Platform.ReSharper.ProjectModel.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.Platform.ReSharper.ProjectModel.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Shell">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.Platform.ReSharper.Shell.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.Platform.ReSharper.Shell.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.TextControl">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.Platform.ReSharper.TextControl.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.Platform.ReSharper.TextControl.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.Util">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.Platform.ReSharper.Util.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.Platform.ReSharper.Util.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Feature.Services">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.ReSharper.Feature.Services.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.ReSharper.Feature.Services.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Feature.Services.CSharp">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.ReSharper.Feature.Services.CSharp.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.ReSharper.Feature.Services.CSharp.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Intentions">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.ReSharper.Intentions.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.ReSharper.Intentions.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Intentions.CSharp">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.ReSharper.Intentions.CSharp.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.ReSharper.Intentions.CSharp.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Psi">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.ReSharper.Psi.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.ReSharper.Psi.dll</HintPath>
     </Reference>
     <Reference Include="JetBrains.ReSharper.Psi.CSharp">
-      <HintPath>..\..\..\..\..\..\..\Program Files\JetBrains\ReSharper\v5.0\Bin\JetBrains.ReSharper.Psi.CSharp.dll</HintPath>
+      <HintPath>C:\Program Files\JetBrains\ReSharper\v5.1\Bin\JetBrains.ReSharper.Psi.CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
